Main Demo updated

--- a/API BAsic Training/Code/Basics of C#/ClassesAndOOP/ClassesAndOOP/ClassesAndOOP/ClassesAndOOP.csproj
+++ b/API BAsic Training/Code/Basics of C#/ClassesAndOOP/ClassesAndOOP/ClassesAndOOP/ClassesAndOOP.csproj
@@ -43,6 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbstractClass.cs" />
+    <Compile Include="Encapsulation.cs" />
+    <Compile Include="Inheritance.cs" />
+    <Compile Include="Polymorphism.cs" />
+    <Compile Include="TypesofClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
