--- a/API Basic Training/Code/Basics of C#/MainDemo/Test of Basic C# training/Test of Basic C# training/Test of Basic C# training.csproj
+++ b/API Basic Training/Code/Basics of C#/MainDemo/Test of Basic C# training/Test of Basic C# training/Test of Basic C# training.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
-    <Compile Include="DataManagement.cs" />
+    <Compile Include="DatabaseManagement.cs" />
     <Compile Include="PinManagement.cs" />
     <Compile Include="MenuSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
