--- a/API Basic Training/Code/Advance of C#/ATM Simulation Demo/ATM Simulation Demo/ATM Simulation Demo.csproj
+++ b/API Basic Training/Code/Advance of C#/ATM Simulation Demo/ATM Simulation Demo/ATM Simulation Demo.csproj
@@ -250,10 +250,13 @@
   <ItemGroup>
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="BAL\Auth\CustomAuthenticationFilter.cs" />
-    <Compile Include="BAL\Auth\CustomAuthorizationFilter.cs" />
-    <Compile Include="BAL\Backup\Backup.cs" />
-    <Compile Include="BAL\Caching\CacheManager.cs" />
+    <Compile Include="Others\Auth\Account\CustomAuthenticationFilter.cs" />
+    <Compile Include="Others\Auth\Account\CustomAuthorizationFilter.cs" />
+    <Compile Include="Others\Auth\Account\TokenManager.cs" />
+    <Compile Include="Others\Auth\User\CustomAuthenticationFilter.cs" />
+    <Compile Include="Others\Auth\User\CustomAuthorizationFilter.cs" />
+    <Compile Include="Others\Backup\Backup.cs" />
+    <Compile Include="Others\Caching\CacheManager.cs" />
     <Compile Include="BAL\Interface\IBLPinModule.cs" />
     <Compile Include="BAL\Interface\IBLUserRepository.cs" />
     <Compile Include="BAL\Interface\IBLUserService.cs" />
@@ -262,19 +265,19 @@
     <Compile Include="BAL\Interface\IBLAccountService.cs" />
     <Compile Include="BAL\Interface\IBLTransactionRepository.cs" />
     <Compile Include="BAL\Interface\IBLTransactionService.cs" />
-    <Compile Include="BAL\Security\BLCrypto.cs" />
+    <Compile Include="Others\Security\BLCrypto.cs" />
     <Compile Include="Controllers\CLAccountController.cs" />
     <Compile Include="Controllers\CLBackupController.cs" />
     <Compile Include="Controllers\CLTransactionController.cs" />
     <Compile Include="Controllers\CLUserController.cs" />
-    <Compile Include="DAL\Account\AccountRepository.cs" />
-    <Compile Include="DAL\Account\AccountServices.cs" />
+    <Compile Include="DAL\AccountRepository.cs" />
+    <Compile Include="BAL\Services\AccountServices.cs" />
     <Compile Include="DAL\DAL_Helper.cs" />
-    <Compile Include="DAL\Pin\PinModule.cs" />
-    <Compile Include="DAL\Transaction\TransactionRepository.cs" />
-    <Compile Include="DAL\Transaction\TransactionServices.cs" />
-    <Compile Include="DAL\User\UserRepository.cs" />
-    <Compile Include="DAL\User\UserServices.cs" />
+    <Compile Include="DAL\PinModule.cs" />
+    <Compile Include="DAL\TransactionRepository.cs" />
+    <Compile Include="BAL\Services\TransactionServices.cs" />
+    <Compile Include="DAL\UserRepository.cs" />
+    <Compile Include="BAL\Services\UserServices.cs" />
     <Compile Include="EnumConverter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -284,7 +287,7 @@
     <Compile Include="Models\BLTransactionModel.cs" />
     <Compile Include="Models\BLUserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TokenManager.cs" />
+    <Compile Include="Others\Auth\User\TokenManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
